* More help stuff (inspectors).
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23170 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/ContentViewers/FolderViewer/GNUmakefile
+++ b/Inspector/ContentViewers/FolderViewer/GNUmakefile
@@ -16,7 +16,8 @@ FolderViewer_PRINCIPAL_CLASS = FolderViewer
 
 #FolderViewer_LOCALIZED_RESOURCE_FILES = Localizable.strings
 
-FolderViewer_RESOURCE_FILES = InspectorInfo.plist
+FolderViewer_RESOURCE_FILES = InspectorInfo.plist \
+Help.rtfd
 
 -include GNUmakefile.preamble
 
