Inspector/ContentViewers: made the help contents localizable.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23175 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/ContentViewers/AppViewer/GNUmakefile
+++ b/Inspector/ContentViewers/AppViewer/GNUmakefile
@@ -15,12 +15,8 @@ AppViewer_OBJC_FILES = AppViewer.m
 
 AppViewer_PRINCIPAL_CLASS = AppViewer
 
-#AppViewer_LANGUAGES = English
-
-#AppViewer_LOCALIZED_RESOURCE_FILES = Localizable.strings
-
-AppViewer_RESOURCE_FILES = InspectorInfo.plist \
-Help.rtfd
+AppViewer_RESOURCE_FILES = Resources/English.lproj \
+InspectorInfo.plist 
 
 -include GNUmakefile.preamble
 
