--- a/Inspector/ContentViewers/PdfViewer/GNUmakefile
+++ b/Inspector/ContentViewers/PdfViewer/GNUmakefile
@@ -16,7 +16,7 @@ PdfViewer_PRINCIPAL_CLASS = PdfViewer
 #PdfViewer_LANGUAGES = English 
 PdfViewer_RESOURCE_FILES = Images/* \
                            InspectorInfo.plist \
-                           Help.rtfd
+                           Resources/English.lproj 
 
 #PdfViewer_LOCALIZED_RESOURCE_FILES = Localizable.strings
 
