* GWMetadata/MDKit: new framework that contains classess and resources to access the metadata db.
* GWMetadata/SQLite: removed. Included in MDKit.

* GWMetadata/gmds/mdfind: simple tool to send queries to the metadata db.



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23621 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/GNUmakefile.in
+++ b/GWMetadata/GNUmakefile.in
@@ -7,7 +7,7 @@ GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 #
 # subprojects
 #
-SUBPROJECTS = SQLite \
+SUBPROJECTS = MDKit \
               gmds \
 	      			Preferences \
 	      			Testing/GMDSClient
