--- a/GWMetadata/gmds/mdfind/GNUmakefile.in
+++ b/GWMetadata/gmds/mdfind/GNUmakefile.in
@@ -2,8 +2,8 @@ PACKAGE_NEEDS_CONFIGURE = YES
 
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
-ADDITIONAL_INCLUDE_DIRS += @ADDITIONAL_INCLUDE_DIRS@
-ADDITIONAL_LIB_DIRS += @ADDITIONAL_LIB_DIRS@
+ADDITIONAL_INCLUDE_DIRS += @SQLITE_INCLUDE_DIRS@
+ADDITIONAL_LIB_DIRS += @SQLITE_LIB_DIRS@
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
