GWMetadata/gmds/mdextractor/Extractors/RtfExtractor: New extractor for rtf/rtfd
GWMetadata/gmds/mdextractor/Extractors/AbiwordExtractor/AbiwordExtractor.[hm]:
GWMetadata/gmds/mdextractor/Extractors/HtmlExtractor/HtmlExtractor.[hm]:
GWMetadata/gmds/mdextractor/Extractors/JpegExtractor/JpegExtractor.[hm]:
GWMetadata/gmds/mdextractor/Extractors/OpenOfficeExtractor/OpenOfficeExtractor.[hm]:
GWMetadata/gmds/mdextractor/Extractors/PdfExtractor/PdfExtractor.[hm]:
GWMetadata/gmds/mdextractor/Extractors/TextExtractor/TextExtractor.[hm]:
GWMetadata/gmds/mdextractor/Extractors/XmlExtractor/XmlExtractor.[hm]:
Removed declaration of the unused StemmerProtocol protocol.
Removed declaration and implementation of the unused -fileType method.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23710 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/gmds/mdextractor/Extractors/GNUmakefile.in
+++ b/GWMetadata/gmds/mdextractor/Extractors/GNUmakefile.in
@@ -6,6 +6,7 @@ ifneq ($(PDFKIT),no)
 SUBPROJECTS = \
   TextExtractor \
   HtmlExtractor \
+  RtfExtractor \
   PdfExtractor \
   OpenOfficeExtractor \
   AbiwordExtractor \
@@ -15,6 +16,7 @@ else
 SUBPROJECTS = \
   TextExtractor \
   HtmlExtractor \
+  RtfExtractor \
   OpenOfficeExtractor \
   AbiwordExtractor \
   XmlExtractor \
