--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,5 @@ AC_DEFINE_UNQUOTED([GW_DEBUG_LOG], [$GW_DEBUG_LOG], [debug logging])
 
 AC_CONFIG_FILES([GNUmakefile \
 									Tools/ddbd/GNUmakefile \
-									GWorkspace/GNUmakefile \
-									GWorkspace/GWorkspaceInfo.plist])
+									GWorkspace/GNUmakefile])
 AC_OUTPUT
