* Inspector/ContentViewers/AppViewer/AppViewer.m: In -displayPath: check if the image path exists.
* GWMetadata/MDKit/Resources/attributes.plist:
Added some attributes for the Application Extractor (ex. GSMDItemUnixExtensions).

* GWMetadata/gmds/mdextractor/Extractors/AppExtractor:
New extractor.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23770 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/MDKit/Resources/attributes.plist
+++ b/GWMetadata/MDKit/Resources/attributes.plist
@@ -384,4 +384,33 @@
     type = <*I0>;
     description = "File type of the document. (NSString)";
   };
+  GSMDItemUnixExtensions = {
+    type = <*I1>;
+    elements_type = <*I0>;
+    description = "File extensions an application can open. (NSArray of NSString elements)";
+  };
+  GSMDItemCopyrightDescription = {
+    type = <*I0>;
+    description = "Description of the copyright (License type, etc.). (NSString)";
+  };
+  GSMDItemRole = {
+    type = <*I0>;
+    description = "Role of the application (Editor, Viewer, etc.). (NSString)";
+  };
+  GSMDItemBuildVersion = {
+    type = <*I0>;
+    description = "Build version of the application. (NSString)";
+  };
+  GSMDItemApplicationName = {
+    type = <*I0>;
+    description = "Name of the application. (NSString)";
+  };  
+  GSMDItemApplicationDescription = {
+    type = <*I0>;
+    description = "Description of the application. (NSString)";
+  };
+  GSMDItemApplicationRelease = {
+    type = <*I0>;
+    description = "Full name of the application release. (NSString)";
+  };
 }
