* GWMetadata/MDKit: Added MDKQueryManager and modified other classes to use its methods.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23891 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/MDKit/GNUmakefile.in
+++ b/GWMetadata/MDKit/GNUmakefile.in
@@ -18,12 +18,14 @@ MDKit_RESOURCE_FILES = \
 		    
 MDKit_OBJC_FILES = \
 SQLite.m \
-MDKQuery.m 
+MDKQuery.m \
+MDKQueryManager.m
 
 MDKit_HEADER_FILES = \
 MDKit.h \
 SQLite.h \
-MDKQuery.h 
+MDKQuery.h \
+MDKQueryManager.h 
     				 
 -include GNUmakefile.preamble
 
