Changed GNUSTEP_INSTALLATION_DIR with GNUSTEP_INSTALLATION_DOMAIN.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23899 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/thumbnailer/ImageThumbnailer/GNUmakefile
+++ b/Tools/thumbnailer/ImageThumbnailer/GNUmakefile
@@ -1,7 +1,8 @@
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
-
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 BUNDLE_NAME = ImageThumbnailer
 BUNDLE_EXTENSION = .thumb
