--- a/ClipBook/GNUmakefile
+++ b/ClipBook/GNUmakefile
@@ -1,11 +1,11 @@
-PACKAGE_NEEDS_CONFIGURE = YES
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = ClipBook
 VERSION = 0.6
-
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 #
 # MAIN APP
