--- a/DBKit/Testing/GNUmakefile
+++ b/DBKit/Testing/GNUmakefile
@@ -1,4 +1,6 @@
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
