--- a/GWMetadata/MDKit/GNUmakefile.in
+++ b/GWMetadata/MDKit/GNUmakefile.in
@@ -1,6 +1,8 @@
-PACKAGE_NEEDS_CONFIGURE = YES
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+PACKAGE_NEEDS_CONFIGURE = YES
 
 ADDITIONAL_INCLUDE_DIRS += @ADDITIONAL_INCLUDE_DIRS@
 ADDITIONAL_LIB_DIRS += @ADDITIONAL_LIB_DIRS@
