--- a/GWMetadata/Testing/GMDSClient/GNUmakefile
+++ b/GWMetadata/Testing/GMDSClient/GNUmakefile
@@ -1,10 +1,11 @@
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = GMDSClient
 VERSION = 0.1
-
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 APP_NAME = GMDSClient
 GMDSClient_PRINCIPAL_CLASS = GMDSClient
