--- a/GWMetadata/gmds/gmds/GNUmakefile.in
+++ b/GWMetadata/gmds/gmds/GNUmakefile.in
@@ -1,6 +1,8 @@
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 ADDITIONAL_INCLUDE_DIRS += @SQLITE_INCLUDE_DIRS@
 ADDITIONAL_LIB_DIRS += @SQLITE_LIB_DIRS@
