--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -1,11 +1,13 @@
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
+
 PACKAGE_NEEDS_CONFIGURE = YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = @PACKAGE_NAME@
 VERSION = @PACKAGE_VERSION@
-
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 #
 # subprojects
