--- a/Inspector/ContentViewers/ImageViewer/resizer/GNUmakefile
+++ b/Inspector/ContentViewers/ImageViewer/resizer/GNUmakefile
@@ -1,7 +1,9 @@
 
-include $(GNUSTEP_MAKEFILES)/common.make
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+include $(GNUSTEP_MAKEFILES)/common.make
 
 TOOL_NAME = resizer
 
