--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -1,6 +1,8 @@
-PACKAGE_NEEDS_CONFIGURE = YES
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+PACKAGE_NEEDS_CONFIGURE = YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
 include inspector.make
