--- a/Recycler/GNUmakefile
+++ b/Recycler/GNUmakefile
@@ -1,10 +1,11 @@
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
+RPM_DISABLE_RELOCATABLE=YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = Recycler
 VERSION = 0.7
-
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 #
 # MAIN APP
