* FSNode/FSNode.[hm]: Added -compareAccordingToPath:
* GWMetadata/MDKit/GNUmakefile.in:
* GWMetadata/MDKit/GNUmakefile.preamble:
Added FSNode dependency.

* GWMetadata/MDKit/MDKQueryManager:
Register for notifications sent by mdextractor to update the live queries. 

* GWMetadata/MDKit/MDKQuery:
Added a single "status" flag to substitute some bools.
Uses FSNode instead of NSString for the results.

* GWMetadata/Testing/GMDSClient/GMDSClient.m:
Keeps the current query "live" (the query updates when gets mdextractor notifications).


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@24127 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/MDKit/GNUmakefile.in
+++ b/GWMetadata/MDKit/GNUmakefile.in
@@ -15,6 +15,10 @@ include Version
 MDKit_PRINCIPAL_CLASS = MDKQuery
 MDKit_HAS_RESOURCE_BUNDLE = yes
 
+MDKit_GUI_LIBS += -lFSNode
+LIBRARIES_DEPEND_UPON += -lFSNode
+LIBRARIES_DEPEND_UPON += -lgnustep-gui $(SYSTEM_LIBS)
+
 MDKit_RESOURCE_FILES = \
     Resources/attributes.plist 
 		    
