* GWorkspace/WorkspaceApplication.m: In -openFile:withApplication:andDeactivate: uses the default editor if there isn't an application for the given extension.
* FSNode/FSNPathComponentsViewer.m:
In -doubleClickOnComponent: 
use only NSWorkspace methods.

* FSNode/FSNIcon.m:
* FSNode/FSNBrowserColumn.m:
* FSNode/FSNIconsView.m:
* FSNode/FSNListView.m:
* GWorkspace/Desktop/GWDesktopView.m:
* GWorkspace/TShelf/TShelfIcon.m:
* GWorkspace/Fiend/FiendLeaf.m:
In -draggingEntered:
Better paths validation check.

GWMetadata/Testing:
Removed.

GWMetadata/MDFinder:
Added. This will be the future Finder.

GWMetadata/MDKit:
More work on saving and loading queries.



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@24316 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/GNUmakefile.in
+++ b/GWMetadata/GNUmakefile.in
@@ -12,7 +12,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 SUBPROJECTS = MDKit \
               gmds \
 	      			Preferences \
-	      			Testing/GMDSClient
+	      			MDFinder
 						 
 -include GNUmakefile.preamble
 
