--- a/GWMetadata/Preferences/Resources/categories.plist
+++ b/GWMetadata/Preferences/Resources/categories.plist
@@ -1,58 +1,65 @@
 {
+  sources = {
+    category_name = "sources";
+    menu_name = "Source code";
+    icon = "sources";
+    active = <*I1>;
+    index = <*I0>;
+  };
   applications = {
     category_name = "applications";
     menu_name = "Applications";
     icon = "applications";
     active = <*I1>;
-    index = <*I0>;
+    index = <*I1>;
   };
   documents = {
     category_name = "documents";
     menu_name = "Documents";
     icon = "documents";
     active = <*I1>;
-    index = <*I1>;
+    index = <*I2>;
   };
   folders = {
     category_name = "folders";
     menu_name = "Folders";
     icon = "folders";
     active = <*I1>;
-    index = <*I2>;
+    index = <*I3>;
   };
   images = {
     category_name = "images";
     menu_name = "Images";
     icon = "images";
     active = <*I1>;
-    index = <*I3>;
+    index = <*I4>;
   };
   pdfdocs = {
     category_name = "pdfdocs";
     menu_name = "PDF Documents";
     icon = "pdfdocs";
     active = <*I1>;
-    index = <*I4>;
+    index = <*I5>;
   };
   movies = {
     category_name = "movies";
     menu_name = "Movies";
     icon = "movies";
     active = <*I1>;
-    index = <*I5>;
+    index = <*I6>;
   };
   music = {
     category_name = "music";
     menu_name = "Music";
     icon = "music";
     active = <*I1>;
-    index = <*I6>;
+    index = <*I7>;
   };
   plainfiles = {
     category_name = "plainfiles";
     menu_name = "Plain Files";
     icon = "plainfiles";
     active = <*I1>;
-    index = <*I7>;
+    index = <*I8>;
   };    
 }
