* GWorkspace/GWorkspace.[hm]: Added a -showExternalSelection: method to allow other applications to use the Inspector through DO.
* GWorkspace/GWorkspace.m:
In -applicationDidBecomeActive: reset the current selection in the Inspector.

* GWorkspace/GWorkspace.m:
* GWorkspace/FileViewer/GWViewer.m:
* GWorkspace/FileViewer/GWSpatialViewer.m:
* GWorkspace/FileViewer/GWViewersManager.m:
Ask the user before opening the current selection if it contains more than 20 items.

* GWMetadata:
All the system is now working. Try it!



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@24326 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/MDFinder/GNUmakefile
+++ b/GWMetadata/MDFinder/GNUmakefile
@@ -15,6 +15,7 @@ MDFinder_HAS_RESOURCE_BUNDLE = yes
 
 MDFinder_RESOURCE_FILES = \
     Resources/Images/* \
+    Resources/English.lproj 
 
 MDFinder_LANGUAGES = Resources/English 
 
@@ -24,6 +25,7 @@ MDFinder_OBJC_FILES = main.m \
                   MDFinder.m 
 
 ADDITIONAL_GUI_LIBS += -lMDKit
+ADDITIONAL_GUI_LIBS += -lFSNode
                   				 
 -include GNUmakefile.preamble
 
