* FSNode/FSNListView.m: In -keyDown: Unselect the name editor.
* Tools/fswatcher:
Added configure files.

* Tools/fswatcher/fswatcher-inotify.[hm]:
New inotify based fswatcher.

* configure.ac:
Add "Tools/fswatcher" in AC_CONFIG_SUBDIRS



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@24424 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/fswatcher/GNUmakefile.in
+++ b/Tools/fswatcher/GNUmakefile.in
@@ -10,7 +10,20 @@ TOOL_NAME = fswatcher
 
 # The Objective-C source files to be compiled
 
-fswatcher_OBJC_FILES = fswatcher.m 
+WITH_INOTIFY=@with_inotify@
+WITH_FAM=@with_fam@
+
+ifeq ($(WITH_INOTIFY),yes)
+  fswatcher_OBJC_FILES = fswatcher-inotify.m
+else
+  ifeq ($(WITH_FAM),yes)
+    fswatcher_OBJC_FILES = fswatcher-fam.m
+  else
+    fswatcher_OBJC_FILES = fswatcher.m
+  endif
+endif
+
+fswatcher_TOOL_LIBS += -lDBKit
 
 # The Resource files to be copied into the app's resources directory
 
