* Inspector/configure.ac: * Inspector/configure: * GWMetadata/gmds/configure.ac: * GWMetadata/gmds/configure: Check for GNUSTEP_MAKEFILES, not GNUSTEP_SYSTEM_ROOT * Inspector/aclocal.m4: * GWMetadata/gmds/aclocal.m4: Use GNUSTEP_SYSTEM_HEADERS and GNUSTEP_SYSTEM_LIBRARIES. Remove refernece to obsolete debug and profile extension.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@24642 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/gmds/configure.ac
+++ b/GWMetadata/gmds/configure.ac
@@ -1,8 +1,8 @@
 AC_PREREQ(2.52)
 AC_INIT
 
-if test -z "$GNUSTEP_SYSTEM_ROOT"; then
-  AC_MSG_ERROR([You must run the GNUstep initialization script first!])
+if test -z "$GNUSTEP_MAKEFILES"; then
+  AC_MSG_ERROR([You must set GNUSTEP_MAKEFILES or run the GNUstep initialization script first!])
 fi
 
 AC_CONFIG_AUX_DIR([$GNUSTEP_MAKEFILES])
