* DBKit/GNUmakefile: * FSNode/GNUmakefile.in: * Inspector/GNUmakefile.in: * Operation/GNUmakefile: * GWMetadate/MDKit/GNUmakefile.in: Some modifications to build on Darwin/gnu runtime. Patch by Yves de Champlain <yves@gnu-darwin.org>
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@24727 72102866-910b-0410-8b05-ffd578937521

--- a/DBKit/GNUmakefile
+++ b/DBKit/GNUmakefile
@@ -26,7 +26,13 @@ DBKPathsTree.h
 
 libDBKit_HEADER_FILES_DIR = .
 libDBKit_HEADER_FILES_INSTALL_DIR=DBKit
-                        
+
+ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
+  ifeq ($(OBJC_RUNTIME_LIB), gnu)
+    SHARED_LD_POSTFLAGS += -lgnustep-base
+  endif
+endif
+
 include $(GNUSTEP_MAKEFILES)/library.make
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 
