--- a/GWMetadata/MDKit/GNUmakefile.in
+++ b/GWMetadata/MDKit/GNUmakefile.in
@@ -51,6 +51,12 @@ MDKAttributeChooser.h \
 MDKAttribute.h \
 MDKAttributeView.h \
 MDKAttributeEditor.h
+
+ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
+  ifeq ($(OBJC_RUNTIME_LIB), gnu)
+    SHARED_LD_POSTFLAGS += -lgnustep-base -lgnustep-gui -lFSNode -lDBKit
+  endif
+endif
     				 
 -include GNUmakefile.preamble
 
