--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -40,6 +40,12 @@ Inspector_OBJC_FILES = \
 
 Inspector_HEADER_FILES = \
          Inspector.h 
+
+ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
+  ifeq ($(OBJC_RUNTIME_LIB), gnu)
+    SHARED_LD_POSTFLAGS += -lgnustep-base -lgnustep-gui -lFSNode
+  endif
+endif
 					 
 -include GNUmakefile.preamble
 
