--- a/GWorkspace/GWorkspaceInfo.plist
+++ b/GWorkspace/GWorkspaceInfo.plist
@@ -2,13 +2,13 @@
     ApplicationName = "GWorkspace";
     ApplicationDescription = "GNUstep Workspace Manager";
     ApplicationIcon = "FileManager.tiff";
-    ApplicationRelease = "GWorkspace-0.8.6";
-    NSBuildVersion = "0.8.6";
+    ApplicationRelease = "GWorkspace-0.8.7";
+    NSBuildVersion = "0.8.7";
     Authors = (
       "Enrico Sersale <enrico\@fibernet.ro>"
     );
-    Copyright = "Copyright (C) 2003, 2004, 2005, 2006, 2007 Free Software Foundation, Inc.";
-    CopyrightDescription = "Released under the GNU General Public License 2.0";
+    Copyright = "Copyright (C) 2003-2008 Free Software Foundation, Inc.";
+    CopyrightDescription = "Released under the GNU General Public License 2.0+";
     NSIcon = "FileManager.tiff";
     NSRole = "Viewer";
   NSTypes = (
