--- a/FSNode/config.h.in
+++ b/FSNode/config.h.in
@@ -1,15 +1,70 @@
+/* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* debug logging */
+#undef GW_DEBUG_LOG
+
+/* Define to 1 if you have the `getmntent' function. */
 #undef HAVE_GETMNTENT
 
-#undef HAVE_MNTENT_H
-
-#undef HAVE_SYS_MNTENT_H
-
-#undef MNT_DIR
-#undef MNT_FSNAME
-#undef MNT_FSTYPE
-
+/* Define to 1 if you have the `getmntinfo' function. */
 #undef HAVE_GETMNTINFO
 
-/* gworkspace debug log */
-#undef GW_DEBUG_LOG
+/* Define to 1 if you have the <inttypes.h> header file. */
+#undef HAVE_INTTYPES_H
+
+/* Define to 1 if you have the <memory.h> header file. */
+#undef HAVE_MEMORY_H
+
+/* Define to 1 if you have the <mntent.h> header file. */
+#undef HAVE_MNTENT_H
+
+/* Define to 1 if you have the <stdint.h> header file. */
+#undef HAVE_STDINT_H
+
+/* Define to 1 if you have the <stdlib.h> header file. */
+#undef HAVE_STDLIB_H
+
+/* Define to 1 if you have the <strings.h> header file. */
+#undef HAVE_STRINGS_H
+
+/* Define to 1 if you have the <string.h> header file. */
+#undef HAVE_STRING_H
+
+/* Define to 1 if you have the <sys/mntent.h> header file. */
+#undef HAVE_SYS_MNTENT_H
+
+/* Define to 1 if you have the <sys/stat.h> header file. */
+#undef HAVE_SYS_STAT_H
+
+/* Define to 1 if you have the <sys/types.h> header file. */
+#undef HAVE_SYS_TYPES_H
+
+/* Define to 1 if you have the <unistd.h> header file. */
+#undef HAVE_UNISTD_H
+
+/* mntent structure member name */
+#undef MNT_DIR
+
+/* mntent structure member name */
+#undef MNT_FSNAME
+
+/* mntent structure member name */
+#undef MNT_FSTYPE
+
+/* Define to the address where bug reports for this package should be sent. */
+#undef PACKAGE_BUGREPORT
+
+/* Define to the full name of this package. */
+#undef PACKAGE_NAME
+
+/* Define to the full name and version of this package. */
+#undef PACKAGE_STRING
+
+/* Define to the one symbol short name of this package. */
+#undef PACKAGE_TARNAME
+
+/* Define to the version of this package. */
+#undef PACKAGE_VERSION
+
+/* Define to 1 if you have the ANSI C header files. */
+#undef STDC_HEADERS
